# cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  main.rs  output.rs
src/client/: error.rs  mod.rs
src/client/models/: agent.rs  api_key.rs  audio.rs  baseline.rs  comment.rs  common.rs  conversation.rs  dashboard.rs  integration.rs  metric.rs  mod.rs  monitor.rs  mutation.rs  organization.rs  persona.rs  review_annotation.rs  review_project.rs  run.rs  run_template.rs  saved_view.rs  scheduled_run.rs  simulation.rs  test_case.rs  test_set.rs  webhook.rs  widget.rs
src/commands/: agents.rs  api_keys.rs  audio.rs  auth.rs  baselines.rs  comments.rs  config.rs  conversations.rs  dashboards.rs  integrations.rs  metrics.rs  mod.rs  monitors.rs  mutations.rs  organization.rs  personas.rs  review_annotations.rs  review_projects.rs  run_templates.rs  runs.rs  saved_views.rs  scheduled_runs.rs  simulations.rs  test_cases.rs  test_sets.rs  traces.rs  webhooks.rs
tests/: cli_tests.rs
